Attempt 2 experiment section

--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -161,7 +161,7 @@ One of the main differences between \cite{TentativeBidding} and ICN is that in I
 
 \cite{LeveledCommitment} uses game theory to prove that a leveled commitment is to be preferred over full commitment in all situations. In the negotiation of a contract in this protocol, a decommitting penalty is agreed, which might be different for both agents. When an agent wants to cancel the contract, it then has to pay this decommitting fee to the other agent. The fee becomes a factor in calculating whether or not it is interesting to cancel the current contract in favor of another contract\footnote{The paper proves (again using game theory) that the consideration by an agent of canceling a contract is more than just checking if the profit of the new contract is higher than the decommitting fee that would then have to be paid. The other agent might decommit if this agent doesn't decommit, which means that this agent would then lose out on both this contract and the new contract.}. It also allows for contracts that were not possible using full commitment. Normally the benefit from an offered contract could be lower than the expected benefit from other contracts that have not yet been announced, which means the agent would wait and not commit to that offered contract. By having the right decommitting fees, this offered leveled commitment contract could become interesting and could be taken up.
 
-\commentV{uitleggen dat we deze niet geimplementeerd hebben}
+\commentV{uitleggen dat we deze niet geimplementeerd hebben\commentY{Dan in design sectie?}}
 
 \section{Multi-agent system design}
 \outline{Wat wij concreet doen}
@@ -172,8 +172,7 @@ Across the world several warehouses are located. For simplification, these wareh
 
 Drones can unexpectedly crash and fail. The drone is then written off and the cost of a drone is subtracted from the profit. Drones are also constrained by their batteries, they only have a limited range before they need to charge. Whenever the battery level gets very low, the chances of crashes increase, as the power that comes from the batteries becomes less and less stable. Drones can charge their batteries at the warehouses for a certain cost. They will intelligently choose a route when delivering a package to try as much as possible to avoid having a low battery.
 
-A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards.
-\commentY{iets zeggen over "uniformly" random? \proposalV{clients that appear randomly afterwards, uniformly distributed over time.}}
+A client has only one order and when that order is delivered, the client stops participating. Client with multiple orders can be reduced to this model by creating multiple clients with one order each. The order consists of the type of package a client wants, the end time by which it wants to have received the package, the price it is willing to pay and the fine it levies if the package is not delivered before the end time. The price and the fine vary around the market price. There are both clients that are initially present in the world and clients that appear randomly afterwards, uniformly distributed over time.
 
 For simplification, all agents are completely aware of the whole world and can send messages to all other agents. 
 
@@ -236,7 +235,7 @@ A client waits one tick for bids to arrive. All bids are satisfactory, as drones
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients.
 
-The other awarded tasks are not queued as in the original CNET protocol \commentV{of verwijzing naar CNET eruithalen?}, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
+The other awarded tasks are not queued as in the original CNET protocol \commentV{of verwijzing naar CNET eruithalen?\commentY{van mij mag die erin blijven}}, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
 
 In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.
 
@@ -342,41 +341,44 @@ All experiments were run using RinSim 4.1.0 on computers at the P\&O lab at the 
 \taskS{Update maxlimiet van figures hieronder met laatste figuur!}
 Figures \ref{fig:drones-profit} to \ref{fig:dynamicclients-profit-grid2} show the results of our experiments. The error bars represent the 95\% confidence interval.
 
-\commentY{Er is nog plaats voor 1 figuur.\proposalY{Figuur~\ref{fig:dynamicclients-switchesdrone-grid2}}}
 \MASplotThree
 {drones-profit}{The influence of the number of drones on the profit}
 {warehouses-profit}{The influence of the number of warehouses on the profit}
 {initialclients-profit}{The influence of the number of clients at the start of the simulation on the profit}
 
-\MASplotThree{dynamicclients-profit}{The influence of the number of clients that appear after the start of the simulation on the profit}
+\MASplotThree
+{dynamicclients-profit}{The influence of the number of clients that appear after the start of the simulation on the profit}
 {dynamicclients-profit-largeNbDrones}{The influence of the number of clients that appear after the start of the simulation on the profit, with a large number of drones}
 {drones-deliverytime}{The influence of the number of drones on the delivery time\commentY{omzetten naar seconden ipv milliseconden?}}
 
-\MASplotThree{dynamicclients-delivered-grid2}{The influence of the number of clients that appear after the start of the simulation on the number of clients that are not delivered (in the second experiment) }
+\MASplotThree
+{drones-delivered}{The influence of the number of drones on the number of clients that are not delivered}
+{dynamicclients-delivered-grid2}{The influence of the number of clients that appear after the start of the simulation on the number of clients that are not delivered (in the second experiment) }
 {dynamicclients-profit-grid2}{The influence of the number of clients that appear after the start of the simulation on the profit (in the second experiment)}
-{dynamicclients-switchesdrone-grid2}{The influence of the number of clients that appear after the start of the simulation on the average number of times a drones switches clients (in the second experiment)}
+%{dynamicclients-switchesdrone-grid2}{The influence of the number of clients that appear after the start of the simulation on the average number of times a drones switches clients (in the second experiment)}
 
 
 \subsection{Analysis}
-\commentY{Echte analyse doen of ook echt expliciet vergelijken met onze hypothese? \commentV{we moeten ook wel zeggen of onze hypothese nu klopte of niet}}
-\commentY{In volgorde van de research questions laten of herordenen? \commentV{volgorde behouden is duidelijkste denk ik, er is niet echt een 'verhaal' waarbij het ene stuk in het andere overgaat}}
-To test whether the experimental data we obtained proves or disproves our hypotheses, we used the Games-Howell test. As the data is heteroscedastic, the TukeyHSD-method will have too many Type-I errors \cite{SMDA}. \cite{games1979tests} showed that Games-Howell is also robust with non-normal data, which is the case for some of our results. A significance level of 95\% was used for all tests.
+\commentY{Echte analyse doen of ook echt expliciet vergelijken met onze hypothese? \commentV{we moeten ook wel zeggen of onze hypothese nu klopte of niet\commentY{Heb het er deels in verwerkt. Is hypothese kloppen ook niet meer voor een conclusie? Al dan niet een conclusie binnen sectie analyse}}}
+To test whether the experimental data we obtained proves or disproves our hypotheses, we used the Games-Howell test. As the data is heteroscedastic, the TukeyHSD-method will have too many Type-I errors \cite{SMDA}. \cite{games1979tests} showed that Games-Howell is also robust with non-normal data, which is the case for some of our results. A significance level of 95\% was used for all tests.\\
 
-Figure~\ref{fig:drones-profit} makes it clear that the number of drones has an influence on which protocol maximizes profit. When there are many drones (7 or more), DynCNET is better than CNCP, which outperforms CNET. For an average number of drones (4 to 6), CNCP outperforms CNET and DynCNET. For 3 drones or less, there is no difference between CNET and CNCP, but both outperform DynCNET. As figure~\ref{fig:dynamicclients-profit} and \ref{fig:dynamicclients-profit-largeNbDrones} show, no breakdown happens when enough drones are present. This explains the different relative performance of DynCNET depending on the number of drones \commentV{hoe? bij te weinig drones -> breakdown en dus lagere profit}.
+Figure~\ref{fig:drones-profit} makes it clear that the number of drones has an influence on which protocol maximizes profit. When there are many drones (7 or more), DynCNET is better than CNCP, which outperforms CNET. For an average number of drones (4 to 6), CNCP outperforms CNET and DynCNET. For 3 drones or less, there is no difference between CNET and CNCP, but both outperform DynCNET. As figure~\ref{fig:dynamicclients-profit} and \ref{fig:dynamicclients-profit-largeNbDrones} show, no breakdown happens when enough drones are present. \proposalY{DynCNET is thus only able to outperform CNCP and CNET with enough drones. Otherwise, it is undecisive and performs worse. CNCP indeed outperforms CNET, for an average or large number of drones.}.\\
 
-Figure~\ref{fig:drones-deliverytime} shows the influence of the number of drones on the delivery time. For 1 drone, DynCNET delivers the fastest, while there is no significant difference between CNET and CNCP\footnote{in case of 1 drone, both protocols don't differ much \commentV{is dat niet hetzelfde als wat in de tekst staat?}}. If two or more drones are present in the world, CNCP will deliver faster than CNET, which will deliver faster than DynCNET.
+Figure~\ref{fig:drones-deliverytime} shows the influence of the number of drones on the delivery time. For 1 drone, DynCNET delivers the fastest, while there is no significant difference between CNET and CNCP\footnote{in case of 1 drone, both protocols don't behave differently\commentY{Zo beter?}}. If two or more drones are present in the world, CNCP will deliver faster than CNET, which will deliver faster than DynCNET. \proposalY{Contrary to our belief, CNCP is thus, in general, faster to deliver than CNET}. \\
 
-The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are. \commentV{figuren?} For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), in CNCP the most packages are delivered, followed by CNET and DynCNET. When there are 9 drones, no significant difference is found between CNET and DynCNET. \commentV{CNCP?} When there are 8 drones, DynCNET outperforms CNET. For a smaller number of drones (4 drones), CNET outperforms DynCNET again. \commentV{wat met 5-7?} Finally, for a very small number of drones (1 or 2 drones), no significant difference was found between CNET and CNCP. \commentV{DynCNET?} In our first experiment, CNCP always outperformed DynCNET. \commentV{in het algemeen of voor 1/2 drones?} However, figure~\ref{fig:dynamicclients-delivered-grid2} shows that when the number of clients increases, DynCNET starts to outperform CNCP. No range was found, in neither experiment, where CNET outperforms CNCP. Only when there are 1 or 2 drones in the world does CNET keep up with CNCP. This is because both protocols act very similarly when there are few drones.
+\proposalY{Paragraaf hieronder is redelijk hard aangepast}
+The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are (figure~\ref{fig:drones-delivered} and \ref{fig:dynamicclients-delivered-grid2}). For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), CNCP will deliver the most packages, followed by CNET and DynCNET. In other scenarios (in experiment 1), CNCP will still outperform the other two. For 9 drones, there is no significant difference between CNET and DynCNET. But when there are 8 drones, DynCNET outperforms CNET. When the number of drones decreases further (to 4 drones or less), CNET outperforms DynCNET again. 
+In our second experiment, DynCNET did outperform CNCP when the number of clients increases (figure~\ref{fig:dynamicclients-delivered-grid2}). However, never (in our experiments), did CNET outperform CNCP. At best, it can keep up with CNCP when there is only 1 drone\footnote{Again, in that case, both protocols will behave similarly}. While we expected CNCP and CNET to deliver the same amount of clients, in practice, CNCP is clearly better than CNET. In some situations, DynCNET is actually better than CNET and for a large number of customers, even better than CNCP.\\
 
-When there are a small number of clients (5 initial clients and 10 extra clients), no significant difference in the number of exchanged messages could be found between CNET and CNCP. However, in general \commentV{dus voor avg/grote aantallen klanten?}, CNCP needs more messages than CNET. DynCNET always needs more messages than the other two protocols.
+When there are a small number of clients (5 initial clients and 10 extra clients), no significant difference in the number of exchanged messages could be found between CNET and CNCP. However, in general \commentV{dus voor avg/grote aantallen klanten? \commentY{beiden}}, CNCP actually needs more messages than CNET (not less). DynCNET always needs more messages than the other two protocols. \\
 
-As figures~\ref{fig:drones-profit}--\ref{fig:dynamicclients-profit} show, a company can make a profit using any of the three protocols, given the right number of drones and warehouses for the given number of clients in the world.
+As figures~\ref{fig:drones-profit}--\ref{fig:dynamicclients-profit} show, a company can indeed make a profit using any of the three protocols, given the right number of drones and warehouses for the given number of clients in the world. \\
 
-When increasing the number of drones, the profit also increases until enough drones are present in the world and saturation is achieved. As saturation sets in quickly in our experiment, no region where the profit increases linearly could be found.
+When increasing the number of drones, the profit also increases until enough drones are present in the world and saturation is achieved. As saturation sets in quickly in our experiment, no region where the profit increases linearly could be found.\\
 
-When increasing the number of warehouses, the profit increases as well. Figure~\ref{fig:warehouses-profit} shows that this increase seems to slow down as the number of warehouses is further increased. More experiments would have to be conducted to fully test this hypothesis. 
+When increasing the number of warehouses, the profit increases as well. Figure~\ref{fig:warehouses-profit} shows that this increase seems to slow down as the number of warehouses is further increased. More experiments would have to be conducted to fully test this hypothesis.\\
 
-When increasing the number of clients (figure~\ref{fig:dynamicclients-profit-grid2}), the profit first increases as well. When the number of clients increases even further, the number of clients whose packages aren't delivered also increases (figure~\ref{fig:dynamicclients-delivered-grid2}). This means the profit starts to fall, as the extra fines start to dominate the extra profits. DynCNET outperforms CNET and CNCP in the number of clients that get delivered when the number of clients increases. However the fall of the profit for DynCNET is a lot steeper, which means in DynCNET actually less profit is earned than in CNET and CNCP. This can be explained by the number of times a drone switches their contract. This number increases linearly with the number of clients up to an average of 15 switches per drone when 200 clients appear after the start of the simulation (figure~\ref{fig:extraclients-switchesdrone-grid2}). \commentV{verdere verklaring? drones moeten langer vliegen -> meer crashes? (natrekken met nbCrashes en avgDistance?)}
+When increasing the number of clients (figure~\ref{fig:dynamicclients-profit-grid2}), the profit first increases as well. When the number of clients increases even further, the number of clients whose packages aren't delivered also increases (figure~\ref{fig:dynamicclients-delivered-grid2}). This means the profit starts to fall, as the extra fines start to dominate the extra profits. DynCNET outperforms CNET and CNCP in the number of clients that get delivered when the number of clients increases. However the fall of the profit for DynCNET is a lot steeper, which means in DynCNET actually less profit is earned than in CNET and CNCP. This can be explained by the number of times a drone switches their contract. This number increases linearly with the number of clients up to an average of 15 switches per drone when 200 clients appear after the start of the simulation. \commentV{verdere verklaring? drones moeten langer vliegen -> meer crashes? (natrekken met nbCrashes en avgDistance?)}
 
 \section{Conclusion}
 \commentV{CW566: TABLE 1: INTERFACE DEFINITIONS FOR A TRANSPORT AGENT AND AN AGV AGENT
