--- a/verslag/report.tex
+++ b/verslag/report.tex
@@ -9,6 +9,8 @@
 \usepackage{caption}
 \usepackage[gen]{eurosym}
 
+\setlength{\parskip}{0.25em}
+
 \title{Extensions on Contract Net Protocol for AGVs \\ \normalsize Multi-agent systems}
 
 \author{Jens Claes \and Victor Le Pochat}
@@ -235,7 +237,7 @@ A client waits one tick for bids to arrive. All bids are satisfactory, as drones
 
 In CNCP and DynCNET, drones can submit multiple bids at the same time and could potentially be awarded multiple tasks. As a drone can only execute one task at a time, it chooses the task with the lowest cost, notifies the client and starts executing it. It denies all other task assignments and notifies those clients.
 
-The other awarded tasks are not queued as in the original CNET protocol \commentV{of verwijzing naar CNET eruithalen?\commentY{van mij mag die erin blijven}}, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
+The other awarded tasks are not queued as in the original CNET protocol, but released for other drones to fulfill, as delivery takes too long for queuing to be sensible. Clients whose assignments have been denied will reannounce the task instead of trying the next best bidder as in the original CNCP, as chances are high that due to the short time between announcements and bidding, this next best bidder has already been assigned another task. 
 
 In the original CNCP the acceptance of a task by a drone is a two-step process: the client first requests that a drone accepts a task, the drone then replies whether they can accept or not and only then does the client formally accept the drone's proposal, award it the task and commit to the contract. This process is merged in our design into a one message that the client is willing to accept the proposal. The drone can then refuse if necessary. While the original CNCP therefore requires $O(2*n)$ more messages, our design only requires one extra message per bidding round.  The number of bidding rounds is increased in comparison with the original CNCP protocol.
 
@@ -359,24 +361,23 @@ Figures \ref{fig:drones-profit} to \ref{fig:dynamicclients-profit-grid2} show th
 
 
 \subsection{Analysis}
-\commentY{Echte analyse doen of ook echt expliciet vergelijken met onze hypothese? \commentV{we moeten ook wel zeggen of onze hypothese nu klopte of niet\commentY{Heb het er deels in verwerkt. Is hypothese kloppen ook niet meer voor een conclusie? Al dan niet een conclusie binnen sectie analyse}}}
-To test whether the experimental data we obtained proves or disproves our hypotheses, we used the Games-Howell test. As the data is heteroscedastic, the TukeyHSD-method will have too many Type-I errors \cite{SMDA}. \cite{games1979tests} showed that Games-Howell is also robust with non-normal data, which is the case for some of our results. A significance level of 95\% was used for all tests.\\
+\commentY{Echte analyse doen of ook echt expliciet vergelijken met onze hypothese? \commentV{we moeten ook wel zeggen of onze hypothese nu klopte of niet\commentY{Heb het er deels in verwerkt. Is hypothese kloppen ook niet meer voor een conclusie? Al dan niet een conclusie binnen sectie analyse\commentV{past inderdaad wel in conclusie, zie ook Schut: Fourthly, you report the analysis of the results. This includes descriptions of the tests that you used for the testing of the hypotheses. - You finish your report with a Section with conclusions. This Section is best structured by first briefly repeating the objectives and research questions, then a summary of the analysis of the results and close with a set of conclusions based on your findings.}}}}
+To test whether the experimental data we obtained proves or disproves our hypotheses, we used the Games-Howell test. As the data is heteroscedastic, the TukeyHSD method will have too many Type I errors \cite{SMDA}. \cite{games1979tests} showed that Games-Howell is also robust with non-normal data, which is the case for some of our results. A significance level of 95\% was used for all tests.
 
-Figure~\ref{fig:drones-profit} makes it clear that the number of drones has an influence on which protocol maximizes profit. When there are many drones (7 or more), DynCNET is better than CNCP, which outperforms CNET. For an average number of drones (4 to 6), CNCP outperforms CNET and DynCNET. For 3 drones or less, there is no difference between CNET and CNCP, but both outperform DynCNET. As figure~\ref{fig:dynamicclients-profit} and \ref{fig:dynamicclients-profit-largeNbDrones} show, no breakdown happens when enough drones are present. \proposalY{DynCNET is thus only able to outperform CNCP and CNET with enough drones. Otherwise, it is undecisive and performs worse. CNCP indeed outperforms CNET, for an average or large number of drones.}.\\
+Figure~\ref{fig:drones-profit} makes it clear that the number of drones has an influence on which protocol maximizes profit. When there are many drones (7 or more), DynCNET is better than CNCP, which outperforms CNET. For an average number of drones (4 to 6), CNCP outperforms CNET and DynCNET. For 3 drones or less, there is no difference between CNET and CNCP, but both outperform DynCNET. As figure~\ref{fig:dynamicclients-profit} and \ref{fig:dynamicclients-profit-largeNbDrones} show, no breakdown happens when enough drones are present. DynCNET is thus only able to outperform CNCP and CNET with enough drones. Otherwise, it performs worse. CNCP outperforms CNET for an average or large number of drones.
 
-Figure~\ref{fig:drones-deliverytime} shows the influence of the number of drones on the delivery time. For 1 drone, DynCNET delivers the fastest, while there is no significant difference between CNET and CNCP\footnote{in case of 1 drone, both protocols don't behave differently\commentY{Zo beter?}}. If two or more drones are present in the world, CNCP will deliver faster than CNET, which will deliver faster than DynCNET. \proposalY{Contrary to our belief, CNCP is thus, in general, faster to deliver than CNET}. \\
+Figure~\ref{fig:drones-deliverytime} shows the influence of the number of drones on the delivery time. For 1 drone, DynCNET delivers the fastest, while there is no significant difference between CNET and CNCP as both protocols don't behave differently if there is only one drone. If two or more drones are present in the world, CNCP will deliver faster than CNET, which will deliver faster than DynCNET. \proposalY{Contrary to our belief, CNCP is thus, in general, faster to deliver than CNET \commentV{beter in conclusie dan?}}. 
 
-\proposalY{Paragraaf hieronder is redelijk hard aangepast}
-The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are (figure~\ref{fig:drones-delivered} and \ref{fig:dynamicclients-delivered-grid2}). For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), CNCP will deliver the most packages, followed by CNET and DynCNET. In other scenarios (in experiment 1), CNCP will still outperform the other two. For 9 drones, there is no significant difference between CNET and DynCNET. But when there are 8 drones, DynCNET outperforms CNET. When the number of drones decreases further (to 4 drones or less), CNET outperforms DynCNET again. 
-In our second experiment, DynCNET did outperform CNCP when the number of clients increases (figure~\ref{fig:dynamicclients-delivered-grid2}). However, never (in our experiments), did CNET outperform CNCP. At best, it can keep up with CNCP when there is only 1 drone\footnote{Again, in that case, both protocols will behave similarly}. While we expected CNCP and CNET to deliver the same amount of clients, in practice, CNCP is clearly better than CNET. In some situations, DynCNET is actually better than CNET and for a large number of customers, even better than CNCP.\\
+The impact of the protocol on the number of clients that don't get their package delivered also depends on how many clients and drones there are (figure~\ref{fig:drones-delivered} and \ref{fig:dynamicclients-delivered-grid2}). For a small number of clients (less than 20 clients initially and less than 50 clients after the start) or a large number of drones (10 drones), CNCP will deliver the most packages, followed by CNET and DynCNET. In other scenarios in the first experiment, CNCP will still outperform the other two protocols. For 9 drones, there is no significant difference between CNET and DynCNET. But when there are 8 drones, DynCNET outperforms CNET. When the number of drones decreases further (to 4 drones or less), CNET outperforms DynCNET again. 
+In our second experiment, DynCNET outperforms CNCP when the number of clients increases (figure~\ref{fig:dynamicclients-delivered-grid2}). However, in our experiments CNET never outperformed CNCP. At best, it can keep up with CNCP when there is only 1 drone due to similar behaviour. \proposalY{While we expected CNCP and CNET to deliver the same amount of clients, in practice, CNCP is clearly better than CNET. In some situations, DynCNET is actually better than CNET and for a large number of customers, even better than CNCP. \commentV{in conclusie?}}
 
-When there are a small number of clients (5 initial clients and 10 extra clients), no significant difference in the number of exchanged messages could be found between CNET and CNCP. However, in general \commentV{dus voor avg/grote aantallen klanten? \commentY{beiden}}, CNCP actually needs more messages than CNET (not less). DynCNET always needs more messages than the other two protocols. \\
+When there are a small number of clients (5 initial clients and 10 extra clients), no significant difference in the number of exchanged messages could be found between CNET and CNCP. However, in other configurations with more clients, CNCP actually needs more messages than CNET (not less). DynCNET always needs more messages than the other two protocols.
 
-As figures~\ref{fig:drones-profit}--\ref{fig:dynamicclients-profit} show, a company can indeed make a profit using any of the three protocols, given the right number of drones and warehouses for the given number of clients in the world. \\
+As figures~\ref{fig:drones-profit}--\ref{fig:dynamicclients-profit} show, a company can indeed make a profit using any of the three protocols, given the right number of drones and warehouses for the given number of clients in the world.
 
-When increasing the number of drones, the profit also increases until enough drones are present in the world and saturation is achieved. As saturation sets in quickly in our experiment, no region where the profit increases linearly could be found.\\
+When increasing the number of drones, the profit also increases until enough drones are present in the world and saturation is achieved. As saturation sets in quickly in our experiment, no region where the profit increases linearly could be found.
 
-When increasing the number of warehouses, the profit increases as well. Figure~\ref{fig:warehouses-profit} shows that this increase seems to slow down as the number of warehouses is further increased. More experiments would have to be conducted to fully test this hypothesis.\\
+When increasing the number of warehouses, the profit increases as well. Figure~\ref{fig:warehouses-profit} shows that this increase seems to slow down as the number of warehouses is further increased. More experiments would have to be conducted to fully test this hypothesis.
 
 When increasing the number of clients (figure~\ref{fig:dynamicclients-profit-grid2}), the profit first increases as well. When the number of clients increases even further, the number of clients whose packages aren't delivered also increases (figure~\ref{fig:dynamicclients-delivered-grid2}). This means the profit starts to fall, as the extra fines start to dominate the extra profits. DynCNET outperforms CNET and CNCP in the number of clients that get delivered when the number of clients increases. However the fall of the profit for DynCNET is a lot steeper, which means in DynCNET actually less profit is earned than in CNET and CNCP. This can be explained by the number of times a drone switches their contract. This number increases linearly with the number of clients up to an average of 15 switches per drone when 200 clients appear after the start of the simulation. \commentV{verdere verklaring? drones moeten langer vliegen -> meer crashes? (natrekken met nbCrashes en avgDistance?)}
 
